Simplify CM template configuration