@@ -1,13 +1,12 @@
 package com.sequenceiq.cloudbreak.cmtemplate.configproviders.hive;
 
-import java.util.ArrayList;
-import java.util.Collections;
+import static com.sequenceiq.cloudbreak.cmtemplate.configproviders.ConfigUtils.config;
+
 import java.util.List;
 
 import org.springframework.stereotype.Component;
 
 import com.cloudera.api.swagger.model.ApiClusterTemplateConfig;
-import com.cloudera.api.swagger.model.ApiClusterTemplateVariable;
 import com.sequenceiq.cloudbreak.cmtemplate.CmTemplateProcessor;
 import com.sequenceiq.cloudbreak.cmtemplate.configproviders.AbstractRoleConfigConfigProvider;
 import com.sequenceiq.cloudbreak.template.TemplatePreparationObject;
@@ -17,45 +16,27 @@ import com.sequenceiq.cloudbreak.template.views.HostgroupView;
 public class HiveServer2RoleConfigConfigProvider extends AbstractRoleConfigConfigProvider {
 
     @Override
-    protected List<ApiClusterTemplateConfig> getRoleConfig(String roleType, HostgroupView hostGroupView) {
-        List<ApiClusterTemplateConfig> roleConfigs = new ArrayList<>();
-
+    protected List<ApiClusterTemplateConfig> getRoleConfig(String roleType, HostgroupView hostGroupView, TemplatePreparationObject source) {
         switch (roleType) {
-            case "HIVESERVER2":
-                roleConfigs.add(new ApiClusterTemplateConfig().name("hive_hs2_config_safety_valve").variable("hive-hive_server2_wm_namespace"));
-                break;
+            case HiveRoles.HIVESERVER2:
+                String uuid = source.getGeneralClusterConfigs().getUuid();
+                String safetyValveValue = "<property><name>hive.server2.wm.namespace</name><value>" + uuid + "</value></property>";
+                return List.of(
+                        config("hive_hs2_config_safety_valve", safetyValveValue)
+                );
             default:
-                break;
+                return List.of();
         }
-
-        return roleConfigs;
-    }
-
-    @Override
-    protected List<ApiClusterTemplateVariable> getVariables(String roleType, HostgroupView hostGroupView, TemplatePreparationObject templatePreparationObject) {
-        List<ApiClusterTemplateVariable> variables = new ArrayList<>();
-
-        switch (roleType) {
-            case "HIVESERVER2":
-                String uuid = templatePreparationObject.getGeneralClusterConfigs().getUuid();
-                variables.add(new ApiClusterTemplateVariable().name("hive-hive_server2_wm_namespace")
-                        .value("<property><name>hive.server2.wm.namespace</name><value>" + uuid + "</value></property>"));
-                break;
-            default:
-                break;
-        }
-
-        return variables;
     }
 
     @Override
     public String getServiceType() {
-        return "HIVE";
+        return HiveRoles.HIVE;
     }
 
     @Override
     public List<String> getRoleTypes() {
-        return Collections.singletonList("HIVESERVER2");
+        return List.of(HiveRoles.HIVESERVER2);
     }
 
     @Override
